# brasil-prev

./: .dockerignore  .env-sample  .flake8  .pylintrc  ARCHITECTURE.md  COMMENTS.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup-dev.sh
.githooks/: pre-push
.github/workflows/: deploy-production.yml  quality.yml
app/: dependencies.py  main.py
app/api/: routes.py
app/application/: simulator.py  worker.py
app/core/: config.py  dependencies.py  exceptions.py  interfaces.py
app/domain/: engine.py  events.py  factories.py  models.py  strategies.py  value_objects.py
app/game/: engine.py  factories.py  models.py  repositories.py  strategies.py
app/infrastructure/api/: middleware.py  rate_limiter.py  routes.py
app/infrastructure/di/: container.py
app/infrastructure/generators/: random.py
app/infrastructure/logging/: logger.py
app/infrastructure/persistence/: repositories.py
app/services/: simulator.py
app/utils/: implementations.py  logger.py  randomizer.py
tests/: conftest.py  test_api.py  test_domain.py  test_error_handling.py  test_game_engine.py  test_integration.py  test_strategies.py
tests/integration/: test_api_endpoints.py  test_error_scenarios.py  test_game_flow.py
tests/unit/application/: test_simulator.py
tests/unit/domain/: test_engine.py  test_factories.py  test_models.py  test_strategies.py  test_value_objects.py
tests/unit/infrastructure/: test_generators.py  test_rate_limiter.py  test_repositories.py
